--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,10 +3,10 @@
     <div class="col-8 offset-2">
    
     <h1>Edit your Listing</h1>
-    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" nonvalidate class="needs-validation"></form>
+    <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" nonvalidate class="needs-validation" enctype="multipart/form-data">
         <div class="mg-3">
             <label for ="title" class="form-label">Title</label>
-        <input name="listing[title] " value="<%= listing.title %>"type="text" class="form-control" required/></div>
+        <input name="listing[title]" value="<%= listing.title %>"type="text" class="form-control" required/></div>
         <br>
         
         <div class="mg-3">
@@ -25,7 +25,7 @@
         
         <div class="mg-3">
             <label for ="price" class="form-label">Price</label>
-        <input name="listing[price] " value="<%= listing.price %>" type ="number" class="form-control" required/></div>
+        <input name="listing[price]" value="<%= listing.price %>" type ="number" class="form-control" required/></div>
         <br>
         
         <div class="mg-3">
